--- a/src/app/componentes/agrega-experiencia/agrega-experiencia.component.html
+++ b/src/app/componentes/agrega-experiencia/agrega-experiencia.component.html
@@ -15,7 +15,7 @@
      
     <div class="form-group">
       
-      <input name="nombreEmpresa"  type="text" class="form-control" id="nombreEmpresa" aria-describedby="emailHelp" ngModel={{experiencia.nombreEmpresa}} placeholder="NOMBRE DE LA EMPRESA">
+      <input name="nombre_empresa"  type="text" class="form-control" id="nombre_empresa" aria-describedby="emailHelp" ngModel={{experiencia.nombre_empresa}} placeholder="NOMBRE DE LA EMPRESA">
       
     </div>
     <div class="form-group">
