--- a/src/app/componentes/experience/experience.component.html
+++ b/src/app/componentes/experience/experience.component.html
@@ -26,7 +26,7 @@
             </div>
             
             <div>
-              <p style="color:rgb(107, 15, 15)">{{experiencia.nombreEmpresa}}</p>
+              <p style="color:rgb(107, 15, 15)">{{experiencia.nombre_empresa}}</p>
             </div>
             <div>
 
