se agrega proyectos

--- a/src/app/componentes/agrega-proyecto/agrega-proyecto.component.html
+++ b/src/app/componentes/agrega-proyecto/agrega-proyecto.component.html
@@ -20,7 +20,7 @@
      
     <div class="form-group">
       
-      <input name="nombreProyecto"  type="text" class="form-control" id="nombreProyecto" aria-describedby="emailHelp" ngModel={{proyecto.nombreProyecto}} placeholder="NOMBRE DEL PROYECTO">
+      <input name="nombre_proyecto"  type="text" class="form-control" id="nombre_proyecto" aria-describedby="emailHelp" ngModel={{proyecto.nombre_proyecto}} placeholder="NOMBRE DEL PROYECTO">
       
     </div>
     
