--- a/src/app/componentes/agrega-educacion/agrega-educacion.component.html
+++ b/src/app/componentes/agrega-educacion/agrega-educacion.component.html
@@ -15,7 +15,7 @@
      
     <div class="form-group">
       
-      <input name="nombreInst"  type="text" class="form-control" id="nombreInst" aria-describedby="emailHelp" ngModel={{educacion.nombreInst}} placeholder="NOMBRE DE LA INSTITUCIÓN">
+      <input name="nombre_inst"  type="text" class="form-control" id="nombre_inst" aria-describedby="emailHelp" ngModel={{educacion.nombre_inst}} placeholder="NOMBRE DE LA INSTITUCIÓN">
       
     </div>
     <div class="form-group">
