--- a/src/app/componentes/education/education.component.html
+++ b/src/app/componentes/education/education.component.html
@@ -25,7 +25,7 @@
                 </div>
                 
                 <div>
-                  <h3 style="color:rgb(101, 124, 160)">{{educacion.nombreInst}}</h3>
+                  <h3 style="color:rgb(101, 124, 160)">{{educacion.nombre_inst}}</h3>
                 </div>
                 <div>
     
