--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -5,7 +5,7 @@
 
         
          
-            <header id="menumobil" [ngClass]="{'active':valor,'noactive':valor}">
+            <header (click)="cerrar()" [ngClass]="{'active':valor,'noactive':valor}">
                 
                     
                     
@@ -36,13 +36,12 @@
                         <a [routerLink]="['/ingresar']" (click)="cerrar()">Ingresar</a>
                     </li>
                 </ul>
-                
+            
             </header>
             
      
 
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-            <script src="../../../assets/js/scripts.min.js"></script>
+            
 
 
 
