--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -4,14 +4,14 @@
 <div class="login">
     <form (ngSubmit)="OnSubmit()" >
         <div class="mb-3">
-          <label for="USUARIO" class="form-label">USUARIO</label>
+          <label for="USUARIO" class="form-label">USUARIO: ARGENTINA</label>
 
           <input type="text" name="usuario" id="usuario" class="form-control"   [(ngModel)]="usuario" placeholder="ARGENTINA">
 
           
         </div>
         <div class="mb-3">
-          <label for="PASSWORD" class="form-label">CONTRASEÑA</label>
+          <label for="PASSWORD" class="form-label">CONTRASEÑA: PROGRAMA</label>
 
           <input type="password" name="password" id="password" class="form-control"  [(ngModel)]="password"placeholder="PROGRAMA">
 
